Fri Aug  7 00:56:30 1998  Matthew D Hancher  <mdh@mit.edu>

	* ftpd.c: (pass): Make daemon not lose for homedirs on 
	root-squashing filesystems.
	(auth_data): Fix that godawful "error: No error" message 
	when gss_acquire_cred() fails.
	(user): Fix getusershell() code so it works more than once.

1998-07-11    <hartmans@fundsxpress.com>

	* ftpd.c (data;): do not declare h_errno; breaks on AIX and
	possibly with other multithreaded systems.

1998-05-26  Theodore Ts'o  <tytso@rsts-11.mit.edu>

	* logwtmp.c: Include paths.h if present, and use _PATH_WTMP to
		determine WTMPFILE.

Fri May  8 18:06:52 1998  Theodore Y. Ts'o  <tytso@mit.edu>

	* ftpcmd.y (cmd): Fix Y2K problem in the MDTM command.

Fri Apr 10 20:06:31 1998  Tom Yu  <tlyu@mit.edu>

	* ftpd.c (receive_data):
	(send_data): Add support for sigsetjmp().
	(main): Use sigaction() if we can to avoid SysV lossage.
	(send_file_list): Oops missed a sigsetjmp() call.
	(send_data): Add call to secure_flush() to send a zero length
	buffer when aborting.
	(send_file_list): Add call to secure_flush() to send a zero length
	buffer when aborting.

	* ftpcmd.y (PBSZ): Remove restriction on shrinking buffer size.

Thu Mar  5 13:59:47 1998  Dan Winship  <danw@mit.edu>

	* ftpcmd.y (getline): Don't syslog passwords! (or newlines)

Tue Feb 24 21:34:34 1998  Tom Yu  <tlyu@mit.edu>

	* ftpcmd.y: Add production "nonguest" to catch things that
	anonymous users aren't supposed to do.  Replace "check_login" with
	"nonguest" in a few places to prevent w4r3z d00dz from being
	lame with world-writable incoming directories.

Sun Feb 22 19:37:07 1998  Tom Yu  <tlyu@mit.edu>

	* ftpd.c: Use krb5_seteuid() and krb5_setegid(). [krb5-libs/505]

	* Makefile.in (ftpd): Fix up KRB4COMPAT_LIBS (was KRB5_BASE_LIBS),
	and add UTIL_LIB.

Wed Feb 18 15:30:10 1998  Tom Yu  <tlyu@mit.edu>

	* Makefile.in: Remove trailing slash from thisconfigdir.  Fix up
	BUILDTOP for new conventions.

Fri Feb 13 22:23:34 1998  Theodore Y. Ts'o  <tytso@mit.edu>
